# can-socketcan-platform

./: CMakeLists.txt
src/: main.c  socketcan.c  socketcan.h
